<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button 
        android:id="@+id/increment_counter"
        android:layout_height="wrap_content"
     	android:layout_width="match_parent"
     	android:text="@string/increment_counter" />
    
    <Button 
        android:id="@+id/add_counter"
        android:layout_below="@id/increment_counter"
        android:layout_height="wrap_content"
     	android:layout_width="match_parent"
     	android:text="@string/add_counter" />
    
    <Button 
        android:id="@+id/remove_counter"
        android:layout_below="@id/add_counter"
        android:layout_height="wrap_content"
     	android:layout_width="match_parent"
     	android:text="@string/remove_counter" />
    
    <Button 
        android:id="@+id/edit_counter"
        android:layout_below="@id/remove_counter"
        android:layout_height="wrap_content"
     	android:layout_width="match_parent"
     	android:text="@string/edit_counter" />
    
    <Button 
        android:id="@+id/reset_counter"
        android:layout_below="@id/edit_counter"
        android:layout_height="wrap_content"
     	android:layout_width="match_parent"
     	android:text="@string/reset_counter" />
    
    <Button 
        android:id="@+id/results"
        android:layout_below="@+id/reset_counter"
        android:layout_height="wrap_content"
     	android:layout_width="match_parent"
     	android:text="@string/results" />
    

</RelativeLayout>
